# FoodBlog

./: .gitignore  pyproject.toml
django_project/blog/: admin.py  forms.py  models.py  urls.py  views.py
django_project/blog/migrations/: 0001_initial.py  0002_post_slug.py  0003_alter_recipe_directions_alter_recipe_ingredients.py  0004_alter_post_slug.py  0005_alter_comment_website.py  0006_comment_create_at.py
django_project/blog/templatetags/: menu_tags.py
django_project/config/: settings.py  urls.py
django_project/contact/: admin.py  forms.py  models.py  urls.py
django_project/contact/migrations/: 0001_initial.py  0002_alter_contactmodel_website.py  0003_about_social_aboutimage.py  0004_about_name.py
django_project/contact/templatetags/: social_tags.py
django_project/gallery/: admin.py  models.py
django_project/gallery/migrations/: 0001_initial.py
django_project/gallery/templatetags/: gallery_tags.py
django_project/project/: admin.py  forms.py  models.py  urls.py  views.py
django_project/project/migrations/: 0001_initial.py  0002_post_slug.py  0003_alter_recipe_directions_alter_recipe_ingredients.py  0004_alter_post_slug.py  0005_alter_comment_website.py  0006_comment_create_at.py
django_project/project/templatetags/: menu_tags.py
django_project/static/css/: style.css
django_project/templates/: base.html  footer.html  header.html
django_project/templates/blog/: home.html  post_detail.html  post_list.html
django_project/templates/contact/: about.html  contact.html
django_project/templates/project/: home.html  post_detail.html  (+1 more)
(+10 files in other folders)
